deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgetdm
  labels:
    app.kubernetes.io/name: forgetdm
spec:
  selector:
    app.kubernetes.io/name: forgetdm
  ports:
    - name: http
      port: 8088
      targetPort: http
    - name: management
      port: 8090
      targetPort: management
